# DictionaryStructures

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  gtest.yml
B+Tree/: CMakeLists.txt  IdxFile.cpp  IdxFile.h  Node.h  bplustree.cpp  bplustree.h
BPlusTreeUT/: BPlusTreeTest.cpp  CMakeLists.txt
HashMultiplication/: CMakeLists.txt  HashIntegerKeys.cpp  HashIntegerKeys.h  HashIntegerKeysByDivision.cpp  HashIntegerKeysByDivision.h
